# libmad-0.15.1b

./: .gitignore  CMakeLists.txt
cmake/: config.h.in
